--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*Layout*/
 body {
-    background: #000;
+    background: #000 url("Breaking Wave.jpg") center/cover no-repeat;
     padding: 5%;
     margin: 0;
     height: 100%;
@@ -8,7 +8,7 @@ body {
 
     font-family: "Arial Black";
     letter-spacing: -2px;
-    color: #fff;
+    color: #000;
     font-size: 30px;
     font-weight: 200;
     -webkit-font-smoothing: antialiased;
