--- a/reasonSober/reasonSober.css
+++ b/reasonSober/reasonSober.css
@@ -7,7 +7,7 @@
     margin-bottom: 48px;
     font-size: 36px;
     font-weight: bolder;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #000;
 }
 
 .reason-sober {
